--- a/github.html
+++ b/github.html
@@ -92,7 +92,7 @@
      
           <button><input type="button" class="button" value="/" onclick="insert('/')"></button>
           <button><input type="button" class="button" value="X" onclick="insert('*')"></button>
-          <button><input type="button" class="button" value="%" onclick="insert('*')"></button>  
+          <button><input type="button" class="button" value="%" onclick="insert('%')"></button>  
       <br>
         <button><input type="button" class="button" value="7" onclick="insert(7)"></button>
         <button><input type="button" class="button" value="8" onclick="insert(8)"></button>
